--- a/VFontDemo/Base.lproj/Main.storyboard
+++ b/VFontDemo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="w91-x9-U3V">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -49,7 +49,54 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="103.79464285714285"/>
+            <point key="canvasLocation" x="884" y="104"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Tpr-SL-Crf">
+            <objects>
+                <navigationController id="w91-x9-U3V" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ifw-io-x4U">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="n6K-AJ-YUz" kind="relationship" relationship="rootViewController" id="WGp-KQ-97T"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6hA-yF-ko5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-693" y="104"/>
+        </scene>
+        <!--Font List View Controller-->
+        <scene sceneID="dgh-gd-QdP">
+            <objects>
+                <viewController id="n6K-AJ-YUz" userLabel="Font List View Controller" customClass="FontListViewController" customModule="VFontDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="h6J-fi-hqR">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="5oF-5W-uDn">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="0vr-pS-NVn"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="5oF-5W-uDn" firstAttribute="leading" secondItem="0vr-pS-NVn" secondAttribute="leading" id="1dU-V6-I6g"/>
+                            <constraint firstItem="5oF-5W-uDn" firstAttribute="trailing" secondItem="0vr-pS-NVn" secondAttribute="trailing" id="6Jg-zR-4YM"/>
+                            <constraint firstItem="5oF-5W-uDn" firstAttribute="top" secondItem="0vr-pS-NVn" secondAttribute="top" id="VhN-dm-3Sc"/>
+                            <constraint firstAttribute="bottom" secondItem="5oF-5W-uDn" secondAttribute="bottom" id="ufk-QD-FWZ"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Variable Fonts" largeTitleDisplayMode="always" id="DvV-Yc-aOj"/>
+                    <connections>
+                        <outlet property="tableView" destination="5oF-5W-uDn" id="xfG-1l-FVG"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="22T-ff-iwx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="67" y="104"/>
         </scene>
     </scenes>
     <resources>
